--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stackframe/react": "^2.8.12",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.518.0",
