--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,16 @@
       "dest": "backend/src/index.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/assets/(.*)",
+      "dest": "frontend/dist/assets/$1"
+    },
+    {
+      "src": "/(cloud[0-9]\\.png|vite\\.svg|favicon\\.png|coffee-removebg-preview\\.png)",
       "dest": "frontend/dist/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/dist/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
